[tool.poetry]
name = "ns-1"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
